# local-campaign-mcp-obsidian

./: .env.example  .gitignore  README.md  main.py  main_http.py  pyproject.toml
.github/workflows/: ci.yml
Locations/: Darkwood Forest.md  Ironpeak Fortress.md  Silverdale.md
tests/: test_main.py
